--- a/.github/workflows/pdq-ci-cpp-format.yml
+++ b/.github/workflows/pdq-ci-cpp-format.yml
@@ -15,6 +15,17 @@ on:
     paths:
       - "pdq/cpp/**"
       - ".github/workflows/pdq-ci-cpp-format.yml" 
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
 
 jobs:
   formatting-check:
