--- a/.github/workflows/python-threatexchange-release.yaml
+++ b/.github/workflows/python-threatexchange-release.yaml
@@ -8,6 +8,17 @@ on:
       - main
     paths:
       - "python-threatexchange/version.txt"
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
 
 defaults:
   run:
