--- a/.github/workflows/vpdq-ci-python.yaml
+++ b/.github/workflows/vpdq-ci-python.yaml
@@ -41,9 +41,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -e .
           pip install pytest
-          python3 vpdq-release.py -i
       - name: Test with pytest
         run: |
           python -m pytest
