--- a/vpdq/pyproject.toml
+++ b/vpdq/pyproject.toml
@@ -15,6 +15,9 @@ readme={file = "python/README.md", content-type = "text/markdown"}
 license = {file = "LICENSE.txt"}
 dynamic = ["version", "scripts", "entry-points"]
 
+[tool.setuptools]
+include-package-data = true
+
 [tool.setuptools.packages.find]
 where = ["python"]  # list of folders that contain the packages (["."] by default)
 include = ["vpdq.pyx"]  # package names should match these glob patterns (["*"] by default)
