--- a/.github/workflows/vpdq-ci-python.yaml
+++ b/.github/workflows/vpdq-ci-python.yaml
@@ -41,8 +41,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .
-          pip install pytest
+          python -m pip install .
+          python -m pip install pytest
       - name: Test with pytest
         run: |
           python -m pytest
