--- a/.github/workflows/vpdq-release.yaml
+++ b/.github/workflows/vpdq-release.yaml
@@ -24,17 +24,24 @@ jobs:
       - name: Install packaging dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          python vpdq-release.py -i
-      - name: Package threatexchange
+          python -m pip install -r packaging-requirements.txt
+
+      - name: Package
         run: |
-          python vpdq-release.py -r
+          python -m build --sdist
+
+      - name: Ensure packaged build runs
+        run: |
+          python -m pip install dist/vpdq*.tar.gz
+          python -c "import vpdq"
+
       - name: Publish distribution to Test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.test_pypi_password }}
           repository_url: https://test.pypi.org/legacy/
           packages_dir: vpdq/dist
+
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
