--- a/vpdq/pyproject.toml
+++ b/vpdq/pyproject.toml
@@ -23,3 +23,9 @@ where = ["python"]  # list of folders that contain the packages (["."] by defaul
 include = ["vpdq.pyx"]  # package names should match these glob patterns (["*"] by default)
 exclude = []  # exclude packages matching these glob patterns (empty by default)
 namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
+
+[tool.cibuildwheel]
+
+before-build-linux = [
+    "sudo apt-get install libavdevice-dev libavfilter-dev libavformat-dev libavcodec-dev libswresample-dev libswscale-dev libavutil-dev"
+]
