Remove tests for now

--- a/vpdq/pyproject.toml
+++ b/vpdq/pyproject.toml
@@ -35,8 +35,8 @@ skip = [
 ]
 
 # This runs tests to make sure it built correctly.
-test-requires = "pytest"
-test-command = "pytest ThreatExchange/vpdq/tests"
+# test-requires = "pytest"
+# test-command = "pytest ThreatExchange/vpdq/tests"
 
 [tool.cibuildwheel.linux]
 before-build = [
