--- a/.github/workflows/vpdq-ci-buildwheel.yaml
+++ b/.github/workflows/vpdq-ci-buildwheel.yaml
@@ -75,8 +75,9 @@ jobs:
         path: dist
         merge-multiple: true
 
-    - name: Publish distribution to Test PyPI
-      uses: pypa/gh-acption-pypi-publish@release/v1
+    - name: Publish to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.test_pypi_password }}
         repository-url: https://test.pypi.org/legacy/
+        # packages-dir: vpdq/dist
