--- a/.github/workflows/vpdq-ci-buildwheel.yaml
+++ b/.github/workflows/vpdq-ci-buildwheel.yaml
@@ -7,6 +7,7 @@ name: Publish vpdq to pypi.
 
 on:
   workflow_dispatch:
+  pull_request:
   # TODO: Re-enable this when cibuildwheel works on Test PyPi
   # push:
   #   branches:
