--- a/.github/workflows/vpdq-ci-buildwheel.yaml
+++ b/.github/workflows/vpdq-ci-buildwheel.yaml
@@ -31,6 +31,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
       - name: Install cibuildwheel
         run: python -m pip install "cibuildwheel<2.18"
