--- a/.github/workflows/vpdq-ci-buildwheel.yaml
+++ b/.github/workflows/vpdq-ci-buildwheel.yaml
@@ -44,6 +44,8 @@ jobs:
         with:
           name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: ./wheelhouse/*.whl
+          if-no-files-found: error
+          retention-days: 5
 
   make_sdist:
     name: Build source distribution
