Fix broken toml missing comma

--- a/vpdq/pyproject.toml
+++ b/vpdq/pyproject.toml
@@ -31,9 +31,9 @@ skip = [
     "*-manylinux_i686",
     # Skip musllinux.
     # yum is not found on musllinux. TODO: See if vpdq and dependencies build with musllinux and override before-build for it.
-    "*-musllinux*"
+    "*-musllinux*",
     # Disable building PyPy wheels on all platforms.
-    "pp*"
+    "pp*",
 ]
 
 # This runs tests to make sure it built correctly.
