--- a/vpdq/pyproject.toml
+++ b/vpdq/pyproject.toml
@@ -38,7 +38,7 @@ skip = [
 
 # This runs tests to make sure it built correctly.
 test-requires = "pytest"
-test-command = "pytest python/tests"
+test-command = "python -m pytest {project}/python/tests"
 
 [tool.cibuildwheel.linux]
 before-build = [
