--- a/vpdq/pyproject.toml
+++ b/vpdq/pyproject.toml
@@ -30,13 +30,15 @@ skip = [
     "*-win32",
     "*-manylinux_i686",
     # Skip musllinux.
-    # yum is not found on musllinux. TODO: See if vpdq and dependencies build with musllinux and override before-build for it.
+    # yum is not found on musllinux.
+    # TODO: See if vpdq and dependencies build with musllinux and override before-build for it.
     "*-musllinux*",
     # Disable building PyPy wheels on all platforms.
+    # TODO: Find out if PyPy is well supported and stable with Cython.
     "pp*",
 ]
 
-# This runs tests to make sure it built correctly.
+# This runs tests with the wheel to make sure it works.
 test-requires = "pytest"
 test-command = "python -m pytest {project}/python/tests"
 
