--- a/.github/workflows/vpdq-release.yaml
+++ b/.github/workflows/vpdq-release.yaml
@@ -20,15 +20,16 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
-      - name: Install packaging dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r packaging-requirements.txt
+          python-version: "3.11"
       - name: Install build dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y python3-dev pkg-config cmake ffmpeg libavcodec-dev libavformat-dev libavdevice-dev libavutil-dev libswscale-dev libswresample-dev libavfilter-dev
+
+      - name: Install packaging dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r packaging-requirements.txt
 
       - name: Package
         run: |
@@ -37,7 +38,7 @@ jobs:
       - name: Ensure packaged build runs
         run: |
           python -m pip install dist/vpdq*.tar.gz
-          python -c "import vpdq"
+          python -c "import vpdq; print(dir(vpdq))"
 
       - name: Publish distribution to Test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
@@ -45,6 +46,18 @@ jobs:
           password: ${{ secrets.test_pypi_password }}
           repository-url: https://test.pypi.org/legacy/
           packages-dir: vpdq/dist
+
+      # From https://packaging.python.org/en/latest/guides/using-testpypi/#using-testpypi-with-pip
+      - name: Test installing the published Test PyPI distribution package
+        run: |
+          pip list
+          pip uninstall -y -r <(pip freeze)
+          pip list
+          python -m pip install --index-url https://test.pypi.org/simple/ vpdq
+          pip list
+          python -c "import vpdq; print(dir(vpdq))"
+          python -m pip install pytest
+          python -m pytest
 
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
