--- a/vpdq/pyproject.toml
+++ b/vpdq/pyproject.toml
@@ -29,5 +29,5 @@ cmake.build-type = "RelWithDebInfo"
 [project.optional-dependencies]
 dev = [
   "pytest",
-  "clang-format~=14",
+  "clang-format",
 ]
