--- a/vpdq/pyproject.toml
+++ b/vpdq/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["scikit-build-core", "cython"]
 build-backend = "scikit_build_core.build"
 
 [project]
-name = "vpdq"
+name = "vpdq-iw"
 authors = [{name = "Meta", email = "threatexchange@meta.com"}]
 description = "Python bindings for Facebook VPDQ hash"
 requires-python = ">= 3.8"
