--- a/.github/workflows/vpdq-release.yaml
+++ b/.github/workflows/vpdq-release.yaml
@@ -59,7 +59,7 @@ jobs:
           pip list
           pip uninstall -y -r <(pip freeze)
           pip list
-          python -m pip install --index-url https://test.pypi.org/simple/ vpdq
+          pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ vpdq-iw
           pip list
           python -c "import vpdq; print(dir(vpdq))"
           python -m pip install pytest
