--- a/.github/workflows/pdq-ci-cpp.yml
+++ b/.github/workflows/pdq-ci-cpp.yml
@@ -21,7 +21,7 @@ defaults:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
       - name: make
